# gtest-clion-example-project

./: .gitignore  .gitmodules  CMakeLists.txt  adder.h
gtests/: CMakeLists.txt  test1.cpp
